--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 13 09:34:40 MST 2020
-sdk.dir=C\:\\Users\\tsaiz\\AppData\\Local\\Android\\Sdk
+#Sat Apr 11 12:53:54 MDT 2020
+sdk.dir=C\:\\Users\\Scott Cheng\\AppData\\Local\\Android\\Sdk
