--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,6 +10,8 @@ dependencies {
     implementation group: 'com.amazonaws', name: 'aws-java-sdk-dynamodb', version: '1.11.547'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.2'
     testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    implementation 'com.amazonaws:aws-java-sdk-sqs:1.11.761'
+    implementation 'com.amazonaws:aws-lambda-java-events:2.2.7'
 }
 
 sourceCompatibility = "7"
